--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 
         <a-entity 
             gltf-model="dientes.glb" 
-            position="0 -16 -1"
+            position="0 -8 -1"
             scale="1 1 1">
         </a-entity>
 
         <a-entity 
             gltf-model="cepillo.gltf" 
-            position="0 -16 -1"
+            position="0 -8 -1"
             scale="1 1 1">
         </a-entity>
-
+     
+         <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#ccc"></a-plane>
 
         <a-sky color="#ECECEC"></a-sky>
     </a-scene>
