--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 
         <a-entity 
-            gltf-model="dientes.glb" 
+            gltf-model="models/dientes.glb" 
             position="0 0 -4"
             scale="1 1 1">
         </a-entity>
 
         <a-entity 
-            gltf-model="cepillo.gltf" 
+            gltf-model="models/cepillo.gltf" 
             position="0 0 -4"
             scale="1 1 1">
         </a-entity>
