--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
         <a-entity 
-            gltf-model="models/dientes.glb" 
+            gltf-model="models/animacion.glb" 
             position="0 0 -4"
             scale="1 1 1">
         </a-entity>
@@ -22,7 +22,8 @@
         <a-entity 
             gltf-model="models/cepillo.gltf" 
             position="0 0 -4"
-            scale="1 1 1">
+            scale="1 1 1"
+             animation-mixer="clip: Cepillado; loop: repeat>
         </a-entity>
      
          <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#ccc"></a-plane>
