--- a/index.html
+++ b/index.html
@@ -16,14 +16,8 @@
         <a-entity 
             gltf-model="models/animacion.glb" 
             position="0 0 -4"
-            scale="1 1 1">
-        </a-entity>
-
-        <a-entity 
-            gltf-model="models/cepillo.gltf" 
-            position="0 0 -4"
             scale="1 1 1"
-             animation-mixer="clip: Cepillado; loop: repeat>
+            animation-mixer="clip: Cepillado; loop: repeat">
         </a-entity>
      
          <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#ccc"></a-plane>
