--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             gltf-model="models/animacion.glb" 
             position="0 0 -4"
             scale="1 1 1"
-            animation-mixer="clip: Cepillado; loop: repeat">
+            animation-mixer="clip: Mesh_2Action; loop: repeat">
         </a-entity>
      
          <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#ccc"></a-plane>
