--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
         <a-entity 
-            gltf-model="models/animacion.glb" 
+            gltf-model="models/animacion.gltf" 
             position="0 0 -4"
             scale="1 1 1"
             animation-mixer="clip: Mesh_2Action; loop: repeat">
