--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Cepillado en Adultos</title>
      <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
+     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
 </head>
 <body>
-    <a-scene>
+    <a-scene embedded arjs>
+        <a-marker preset="hiro">
 
         <a-camera position="0 1.6 0"></a-camera>
         <a-light type="directional" position="0 1.6 1" intensity="1"></a-light>
+        <a-light type="directional" position="0 1.6 -4" intensity="1"></a-light>
 
 
         <a-entity 
@@ -21,10 +24,10 @@
             scale="1 1 1"
             animation-mixer="clip: *; loop: repeat">
         </a-entity>
-     
+     <a-marker preset="hiro">
+
          <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#ccc"></a-plane>
 
-        <a-sky color="#ECECEC"></a-sky>
     </a-scene>
 </body>
 </html>
