--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
      <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
      <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
 
 </head>
-<body>
-    <a-scene embedded arjs>
-        <a-marker preset="hiro">
-
-        <a-camera position="0 1.6 0"></a-camera>
-        <a-light type="directional" position="0 1.6 1" intensity="1"></a-light>
-        <a-light type="directional" position="0 1.6 -4" intensity="1"></a-light>
-
-
+<body style="margin: 0; overflow: hidden;">
+  <a-scene embedded arjs="sourceType: webcam;">
+        
+      <a-marker preset="hiro">
         <a-entity 
             gltf-model="models/animation.gltf" 
             position="0 0 -4"
             scale="1 1 1"
             animation-mixer="clip: *; loop: repeat">
         </a-entity>
-     <a-marker preset="hiro">
+     </a-marker>
+         
+     <a-assets>
+        <a-asset-item id="modelo" src="modelo.glb"></a-asset-item>
+     </a-assets>
 
-         <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#ccc"></a-plane>
+         <a-camera position="0 1.6 0"></a-camera>
 
-    </a-scene>
+     </a-scene>
 </body>
 </html>
