--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a-marker preset="hiro">
         <a-entity 
             gltf-model="models/animation.gltf" 
-            position="0 0 -4"
+            position="0 0 0"
             scale="1 1 1"
             animation-mixer="clip: *; loop: repeat">
         </a-entity>
@@ -26,7 +26,7 @@
         <a-asset-item id="modelo" src="modelo.glb"></a-asset-item>
      </a-assets>
 
-         <a-camera position="0 1.6 0"></a-camera>
+         <a-entity camera></a-entity>
 
      </a-scene>
 </body>
