--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a-entity 
         gltf-model="#modelo"
         position="0 0 0"
+        rotation="0 -90 90"
         scale="1 1 1"
         animation-mixer>
       </a-entity>
