--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         position="0 0 0"
         rotation="-90 0 0"
         scale="0.5 0.5 0.5"
-        animation-mixer>
+        animation-mixer
+        sound="url(models/SaludDental.mp3); autoplay: true">
       </a-entity>
     </a-marker>
 
