--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </a-marker>
 
     <a-entity camera></a-entity>
-    <a-entity sound="autoplay: true; src: #SD"></a-entity>
+    <a-entity sound="autoplay: true; src: #SD; loop: repeat"></a-entity>
   </a-scene>
 </body>
 </html>
