--- a/pagina-pc.html
+++ b/pagina-pc.html
@@ -12,6 +12,12 @@
   </script>
 
   <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+
     #controls {
       position: absolute;
       top: 10px;
@@ -38,19 +44,66 @@
       background-color: #999;
       cursor: default;
     }
+
+    /* Estilos para el aviso modal */
+    #avisoModal {
+      position: fixed;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      text-align: center;
+      font-family: Arial, sans-serif;
+    }
+
+    #avisoModal div {
+      background: #222;
+      padding: 30px;
+      border-radius: 10px;
+      max-width: 400px;
+    }
+
+    #avisoModal h2 {
+      margin-bottom: 20px;
+    }
+
+    #btnCerrarAviso {
+      margin-top: 20px;
+      background-color: #28a745;
+    }
+
+    #btnCerrarAviso:hover {
+      background-color: #218838;
+    }
   </style>
 </head>
 
 <body>
+  <!-- Modal de instrucciones -->
+  <div id="avisoModal">
+    <div>
+      <h2>Instrucciones</h2>
+      <p>Utiliza el <strong>mouse</strong> para mover la cámara.</p>
+      <p>Utiliza las teclas <strong>W A S D</strong> o las <strong>flechas</strong> del teclado para desplazarte en el espacio.</p>
+      <button id="btnCerrarAviso">Entendido</button>
+    </div>
+  </div>
+
   <!-- Botones de control -->
-  <div id="controls">
+  <div id="controls" style="display: none;">
     <button id="btnPlay">Reproducir</button>
     <button id="btnPause" disabled>Pausar</button>
   </div>
 
   <!-- Escena de A-Frame -->
-  <a-scene>
-    <a-camera position="0 1.6 0"></a-camera>
+  <a-scene style="display: none;">
+    <a-camera position="0 1.6 0" wasd-controls look-controls></a-camera>
     <a-light type="directional" position="0 1.6 1" intensity="1"></a-light>
 
     <a-entity id="modelo"
@@ -63,13 +116,23 @@
     <a-sky color="#ECECEC"></a-sky>
   </a-scene>
 
-  <!-- Script para botones -->
+  <!-- Script de lógica -->
   <script>
     const modelo = document.querySelector('#modelo');
     const playBtn = document.querySelector('#btnPlay');
     const pauseBtn = document.querySelector('#btnPause');
+    const controls = document.getElementById('controls');
+    const escena = document.querySelector('a-scene');
+    const avisoModal = document.getElementById('avisoModal');
+    const cerrarBtn = document.getElementById('btnCerrarAviso');
 
     let mixerInitialized = false;
+
+    cerrarBtn.addEventListener('click', () => {
+      avisoModal.style.display = 'none';
+      controls.style.display = 'block';
+      escena.style.display = 'block';
+    });
 
     playBtn.addEventListener('click', () => {
       if (!mixerInitialized) {
