--- a/pagina-movil.html
+++ b/pagina-movil.html
@@ -10,7 +10,7 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam;">
     <a-assets>
-      <a-asset-item id="modelo" src="models/animation.gltf"></a-asset-item>
+      <a-asset-item id="modelo" src="models/brush-it.gltf"></a-asset-item>
       <audio id="SD" src="models/SaludDental.mp3"></audio>
     </a-assets>
 
