--- a/pagina-pc.html
+++ b/pagina-pc.html
@@ -110,7 +110,7 @@
     <a-light type="directional" position="0 1.6 1" intensity="1"></a-light>
 
     <a-entity id="modelo"
-      gltf-model="models/animation.gltf"
+      gltf-model="models/brush-it.gltf"
       position="0 0 -4"
       scale="1 1 1">
     </a-entity>
