--- a/RA.html
+++ b/RA.html
@@ -20,7 +20,7 @@
         position="0 0 0"
         rotation="-90 0 0"
         scale="0.5 0.5 0.5"
-        animation-mixer>
+        animation-mixer="timeScale: 0.5">
       </a-entity>
     </a-marker>
 
