--- a/VR.html
+++ b/VR.html
@@ -112,7 +112,8 @@
     <a-entity id="modelo"
       gltf-model="models/brush-it.gltf"
       position="0 0 -4"
-      scale="1 1 1">
+      scale="1 1 1"
+      animation-mixer="timeScale: 0.5">
     </a-entity>
 
     <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#ccc"></a-plane>
