--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
   <script>
     function redirigir(dispositivo) {
       if (dispositivo === 'movil') {
-        window.location.href = "pagina-movil.html"; // cambia a tu URL para móviles
+        window.location.href = "RA.html"; // cambia a tu URL para móviles
       } else if (dispositivo === 'pc') {
-        window.location.href = "pagina-pc.html"; // cambia a tu URL para ordenadores
+        window.location.href = "VR.html"; // cambia a tu URL para ordenadores
       }
     }
   </script>
