--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: #152E61;
       font-family: Arial, sans-serif;
       display: flex;
       align-items: center;
@@ -35,7 +35,7 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      background-color: #007bff;
+      background-color: #1A3C7E;
       color: white;
       transition: background-color 0.3s;
     }
