--- a/VR.html
+++ b/VR.html
@@ -30,7 +30,7 @@
       margin: 5px;
       font-size: 16px;
       border: none;
-      background-color: #007bff;
+      background-color: #1A3C7E;
       color: white;
       border-radius: 5px;
       cursor: pointer;
