--- a/VR.html
+++ b/VR.html
@@ -74,11 +74,11 @@
 
     #btnCerrarAviso {
       margin-top: 20px;
-      background-color: #28a745;
+      background-color: #1A3C7E;
     }
 
     #btnCerrarAviso:hover {
-      background-color: #218838;
+      background-color: #0056b3;
     }
   </style>
 </head>
