--- a/RA.html
+++ b/RA.html
@@ -6,9 +6,54 @@
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@ar-js-org/ar.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
+  <style>
+    #modal-instrucciones {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.85);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      color: white;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+
+    #modal-instrucciones img {
+      max-width: 250px;
+      margin-bottom: 20px;
+    }
+
+    #modal-instrucciones button {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      background-color: #28a745;
+      color: white;
+      cursor: pointer;
+    }
+
+    #modal-instrucciones button:hover {
+      background-color: #218838;
+    }
+  </style>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs="sourceType: webcam;">
+  <!-- Modal de instrucciones -->
+  <div id="modal-instrucciones">
+    <img src="models/instrucciones.jpg" alt="Instrucciones" />
+    <p><strong>Utiliza tu cámara y enfoca de diferentes maneras el cuadro para observar desde diferentes ángulos.</strong></p>
+    <button onclick="iniciarAR()">Entendido</button>
+  </div>
+
+  <!-- Escena A-Frame (oculta inicialmente) -->
+  <a-scene embedded arjs="sourceType: webcam;" style="display: none;">
     <a-assets>
       <a-asset-item id="modelo" src="models/brush-it.gltf"></a-asset-item>
       <audio id="SD" src="models/SaludDental.mp3"></audio>
@@ -25,7 +70,14 @@
     </a-marker>
 
     <a-entity camera></a-entity>
-    <a-entity sound="autoplay: true; src: #SD; loop: repeat"></a-entity>
+    <a-entity sound="autoplay: true; src: #SD; loop: true;"></a-entity>
   </a-scene>
+
+  <script>
+    function iniciarAR() {
+      document.getElementById('modal-instrucciones').style.display = 'none';
+      document.querySelector('a-scene').style.display = 'block';
+    }
+  </script>
 </body>
 </html>
