--- a/RA.html
+++ b/RA.html
@@ -47,7 +47,7 @@
 <body style="margin: 0; overflow: hidden;">
   <!-- Modal de instrucciones -->
   <div id="modal-instrucciones">
-    <img src="models/instrucciones.jpg" alt="Instrucciones" />
+    <img src="models/Brush-it.png" alt="Instrucciones" />
     <p><strong>Utiliza tu cámara y enfoca de diferentes maneras el cuadro para observar desde diferentes ángulos.</strong></p>
     <button onclick="iniciarAR()">Entendido</button>
   </div>
