--- a/VR.html
+++ b/VR.html
@@ -92,6 +92,7 @@
   <div id="avisoModal">
     <div>
       <h2>Instrucciones</h2>
+      <img src="models/Brush-it.png" alt="Instrucciones" />
       <p>Utiliza el <strong>mouse</strong> para mover la cámara.</p>
       <p>Utiliza las teclas <strong>W A S D</strong> o las <strong>flechas</strong> del teclado para desplazarte en el espacio.</p>
       <button id="btnCerrarAviso">Entendido</button>
