--- a/VR.html
+++ b/VR.html
@@ -72,6 +72,11 @@
       margin-bottom: 20px;
     }
 
+     #avisoModal img {
+      max-width: 250px;
+      margin-bottom: 20px;
+    }
+
     #btnCerrarAviso {
       margin-top: 20px;
       background-color: #1A3C7E;
