--- a/VR.html
+++ b/VR.html
@@ -79,11 +79,11 @@
 
     #btnCerrarAviso {
       margin-top: 20px;
-      background-color: #1A3C7E;
+      background-color: rgb(21, 46, 97);
     }
 
     #btnCerrarAviso:hover {
-      background-color: #0056b3;
+      background-color: rgb(26, 60, 126);
     }
   </style>
 </head>
