--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      background-color: #1A3C7E;
+      background-color: rgb(26, 60, 126);
       color: white;
       transition: background-color 0.3s;
     }
 
     button:hover {
-      background-color: #0056b3;
+      background-color: rgb(21, 46, 97);
     }
   </style>
 </head>
