--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 <body>
 
   <div class="contenedor">
+    <img src="models/Brush-it.png" max-width: 250px;
+      margin-bottom: 20px;>
     <h1>¿Qué dispositivo estás usando?</h1>
     <button onclick="redirigir('movil')">Dispositivo Móvil</button>
     <button onclick="redirigir('pc')">Ordenador</button>
