--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       color: #333;
     }
 
+    img {
+      max-width: 250px;
+      margin-bottom: 20px;
+    }
+
     button {
       margin: 10px;
       padding: 15px 30px;
@@ -48,8 +53,7 @@
 <body>
 
   <div class="contenedor">
-    <img src="models/Brush-it.png" max-width: 250px;
-      margin-bottom: 20px;>
+    <img src="models/Brush-it.png">
     <h1>¿Qué dispositivo estás usando?</h1>
     <button onclick="redirigir('movil')">Dispositivo Móvil</button>
     <button onclick="redirigir('pc')">Ordenador</button>
