--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <script>
     function redirigir(dispositivo) {
       if (dispositivo === 'movil') {
-        window.location.href = "RA.html"; // cambia a tu URL para móviles
+        window.location.href = "Instrucciones.html"; // cambia a tu URL para móviles
       } else if (dispositivo === 'pc') {
         window.location.href = "VR.html"; // cambia a tu URL para ordenadores
       }
