--- a/VR.html
+++ b/VR.html
@@ -128,50 +128,58 @@
 
   <!-- Script de lógica -->
   <script>
-    const playBtn = document.querySelector('#btnPlay');
-    const pauseBtn = document.querySelector('#btnPause');
-    const controls = document.getElementById('controls');
-    const escena = document.querySelector('a-scene');
-    const avisoModal = document.getElementById('avisoModal');
-    const cerrarBtn = document.getElementById('btnCerrarAviso');
-    const audio = document.getElementById('SD');
+  const playBtn = document.querySelector('#btnPlay');
+  const pauseBtn = document.querySelector('#btnPause');
+  const controls = document.getElementById('controls');
+  const escena = document.querySelector('a-scene');
+  const avisoModal = document.getElementById('avisoModal');
+  const cerrarBtn = document.getElementById('btnCerrarAviso');
+  const audio = document.getElementById('SD');
 
-    let modelo;
-    let mixerReady = false;
+  let modelo;
+  let mixerReady = false;
+  let isPaused = false;
 
-    // Esperar a que A-Frame haya cargado completamente la escena
-    window.addEventListener('load', () => {
-      modelo = document.querySelector('#modelo');
+  window.addEventListener('load', () => {
+    modelo = document.querySelector('#modelo');
 
-      modelo.addEventListener('model-loaded', () => {
-        mixerReady = true;
-      });
+    modelo.addEventListener('model-loaded', () => {
+      mixerReady = true;
+    });
 
-      cerrarBtn.addEventListener('click', () => {
-        avisoModal.style.display = 'none';
-        controls.style.display = 'block';
-        escena.style.display = 'block';
-      });
+    cerrarBtn.addEventListener('click', () => {
+      avisoModal.style.display = 'none';
+      controls.style.display = 'block';
+      escena.style.display = 'block';
+    });
 
-      playBtn.addEventListener('click', () => {
-        if (mixerReady && modelo.components['animation-mixer']) {
+    playBtn.addEventListener('click', () => {
+      if (mixerReady && modelo.components['animation-mixer']) {
+        if (isPaused) {
+          // Reanudar animación
+          modelo.components['animation-mixer'].play();
+          isPaused = false;
+        } else {
+          // Solo iniciar si no estaba en pausa
           modelo.components['animation-mixer'].stop();
           modelo.components['animation-mixer'].play();
+          audio.currentTime = 0;
+          audio.play();
         }
-        audio.currentTime = 0;
-        audio.play();
-        playBtn.disabled = true;
-        pauseBtn.disabled = false;
-      });
-
-      pauseBtn.addEventListener('click', () => {
-        if (mixerReady && modelo.components['animation-mixer']) {
-          modelo.components['animation-mixer'].pause();
-        }
-        audio.pause();
-        playBtn.disabled = false;
-        pauseBtn.disabled = true;
-      });
+      }
+      playBtn.disabled = true;
+      pauseBtn.disabled = false;
     });
-  </script>
+
+    pauseBtn.addEventListener('click', () => {
+      if (mixerReady && modelo.components['animation-mixer']) {
+        modelo.components['animation-mixer'].pause();
+        isPaused = true;
+      }
+      audio.pause();
+      playBtn.disabled = false;
+      pauseBtn.disabled = true;
+    });
+  });
+</script>
 </body>
