--- a/RA.html
+++ b/RA.html
@@ -39,7 +39,8 @@
         gltf-model="#modelo"
         position="0 0 0"
         rotation="-90 0 0"
-        scale="0.5 0.5 0.5">
+        scale="0.5 0.5 0.5"
+        animation-mixer="timeScale: 0.5">
       </a-entity>
       <a-entity id="audio" sound="src: #SD; autoplay: false; loop: true"></a-entity>
     </a-marker>
