--- a/Instrucciones.html
+++ b/Instrucciones.html
@@ -5,39 +5,77 @@
   <title>Cepillado AR</title>
 
   <style>
-    #modal-instrucciones {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.85);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
+    body, html {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
     }
 
-    #modal-instrucciones img {
+    #controls {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 10;
+    }
+
+    button {
+      padding: 10px 20px;
+      margin: 5px;
+      font-size: 16px;
+      border: none;
+      background-color: #1A3C7E;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    button:disabled {
+      background-color: #999;
+      cursor: default;
+    }
+
+    #avisoModal {
+      position: fixed;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      text-align: center;
+      font-family: Arial, sans-serif;
+    }
+
+    #avisoModal div {
+      background: #222;
+      padding: 30px;
+      border-radius: 10px;
+      max-width: 400px;
+    }
+
+    #avisoModal h2 {
+      margin-bottom: 20px;
+    }
+
+     #avisoModal img {
       max-width: 250px;
       margin-bottom: 20px;
     }
 
-    #modal-instrucciones button {
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
+    #btnCerrarAviso {
+      margin-top: 20px;
       background-color: rgb(21, 46, 97);
-      color: white;
-      cursor: pointer;
     }
 
-    #modal-instrucciones button:hover {
+    #btnCerrarAviso:hover {
       background-color: rgb(26, 60, 126);
     }
   </style>
@@ -46,7 +84,7 @@
 <body style="margin: 0; overflow: hidden;">
 
   <!-- Modal de instrucciones -->
-  <div id="modal-instrucciones">
+  <div id="avisoModal">
     <img src="models/Brush-it.png" alt="Instrucciones" />
     <p><strong>Utiliza tu cámara y enfoca de diferentes maneras el cuadro para observar desde diferentes ángulos.</strong></p>
     <button onclick="redirigir('movil')">Entendido</button>
