--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       if (dispositivo === 'movil') {
         window.location.href = "Instrucciones.html"; // cambia a tu URL para móviles
       } else if (dispositivo === 'pc') {
-        window.location.href = "Instrucciones PC.html"; // cambia a tu URL para ordenadores
+        window.location.href = "InstruccionesVR.html"; // cambia a tu URL para ordenadores
       }
     }
   </script>
