--- a/InstruccionesVR.html
+++ b/InstruccionesVR.html
@@ -1,4 +1,10 @@
-<style>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>Cepillado AR</title>
+
+    <style>
     body {
       margin: 0;
       padding: 0;
