--- a/Instrucciones.html
+++ b/Instrucciones.html
@@ -53,8 +53,6 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-
-  <!-- Modal de instrucciones -->
   <div class="contenedor">
     <img src="models/Brush-it.png" alt="Instrucciones" />
     <p><strong>Utiliza tu cámara y enfoca de diferentes maneras el cuadro para observar desde diferentes ángulos.</strong></p>
@@ -64,9 +62,9 @@
   <script>
     function redirigir(dispositivo) {
       if (dispositivo === 'movil') {
-        window.location.href = "RA.html"; // cambia a tu URL para móviles
+        window.location.href = "RA.html"; // cambia aquí si tu archivo se llama distinto o está en otra carpeta
+      }
     }
-  }
   </script>
-  </body>
+</body>
 </html>
